# Agentic-Study-Planner

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  FUTURE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  setup.ps1  setup.sh  spike_pdf.py  test_llm.py
data/: README.md
demo/: README.md  app.py  funnel.py
docs/: BUILD_PLAN.md  PRODUCT_PLAN.md  WORKSHOP_DISTRIBUTION_PLAN.md  process_model_verification.tex
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: AppShell.tsx  AuthCard.tsx  QuotaModal.tsx
frontend/src/pages/: Dashboard.tsx  Landing.tsx  Legal.tsx  Login.tsx  NewPlan.tsx  PlanView.tsx  ResetPassword.tsx  Signup.tsx  TryDemo.tsx  Verify.tsx
landing/: README.md  index.html
sample_data/: expected_output_example.md
scripts/: make_new_student.py  make_requirements_pdf.py  make_sample_data.py  run_eval.py
src/study_planner/: __init__.py  check.py  crew.py  inputs.py  llm_config.py  main.py  requirements.py  validate.py  worker.py
src/study_planner/api/: README.md  __init__.py  app.py  audit.py  config.py  cooldown.py  db.py  deps.py  email.py  jobs.py  legal.py  models.py  observability.py  progress.py  quota.py  ratelimit.py  schemas.py  security.py
src/study_planner/api/routes/: account.py  auth.py  legal.py  plans.py
src/study_planner/config/: agents.yaml  tasks.yaml
src/study_planner/ingest/: __init__.py  blank_transcript.py  demo_career.py  handbook_parser.py  ocr.py
src/study_planner/tools/: __init__.py  pdf_tools.py
tests/: test_api.py  test_email.py  test_handbook_parser.py  test_llm_fallback.py  test_ocr.py  test_quota_cooldown.py  test_requirements.py  test_sample_data_catalog.py  test_validate.py
