[project]
name = "study-planner"
version = "0.1.0"
description = "Agentic study planner — 5 CrewAI agents that read a CV, transcript, career path, and module handbook to generate a semester-wise study plan"
requires-python = ">=3.10"
dependencies = [
    "crewai>=1.14.0",
    "litellm>=1.88.0",
    "groq>=0.9.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = ["fpdf2>=2.8.0"]  # only for scripts/make_sample_data.py

[project.scripts]
plan_studies = "study_planner.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/study_planner"]

[tool.crewai]
type = "crew"
